rm specifier check
