# pkg/core/gen/core_proto/protocol.swagger.json
@@ -80,6 +80,44 @@
         ]
       }
     },
+    "/core/grpc/attest/reward": {
+      "get": {
+        "operationId": "Protocol_GetRewardAttestation",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/protocolRewardAttestationResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "data",
+            "description": "base64 encoded json data",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "signature",
+            "description": "signed sha256 hash of the base64 encoded data",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "Protocol"
+        ]
+      }
+    },
     "/core/grpc/block/{height}": {
       "get": {
         "operationId": "Protocol_GetBlock",
@@ -406,6 +444,19 @@
         },
         "registration": {
           "$ref": "#/definitions/protocolValidatorRegistration"
+        }
+      }
+    },
+    "protocolRewardAttestationResponse": {
+      "type": "object",
+      "properties": {
+        "data": {
+          "type": "string",
+          "title": "base64 encoded json data + original signature"
+        },
+        "signature": {
+          "type": "string",
+          "title": "signed sha256 hash of the base64 encoded data"
         }
       }
     },
