# pkg/core/gen/models/protocol_reward_attestation_response.go
@@ -1,0 +1,53 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ProtocolRewardAttestationResponse protocol reward attestation response
+//
+// swagger:model protocolRewardAttestationResponse
+type ProtocolRewardAttestationResponse struct {
+
+	// base64 encoded json data + original signature
+	Data string `json:"data,omitempty"`
+
+	// signed sha256 hash of the base64 encoded data
+	Signature string `json:"signature,omitempty"`
+}
+
+// Validate validates this protocol reward attestation response
+func (m *ProtocolRewardAttestationResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this protocol reward attestation response based on context it is used
+func (m *ProtocolRewardAttestationResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ProtocolRewardAttestationResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ProtocolRewardAttestationResponse) UnmarshalBinary(b []byte) error {
+	var res ProtocolRewardAttestationResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
